Fix nav layout on mobile on all pages

--- a/_sass/_left-side.scss
+++ b/_sass/_left-side.scss
@@ -5,7 +5,7 @@
 
 	.intro-text {
 		position: absolute;
-		z-index: 1;
+		z-index: 0;
 		margin-top: -120px;
 
 		h1 {
@@ -32,7 +32,7 @@
 		margin: 75px 0 auto auto;
 		margin-right: 0;
 		position: relative;
-		z-index: 1;
+		z-index: 0;
 	}
 
 	img {
@@ -40,5 +40,6 @@
 		bottom: 0;
 		right: -55px;
 		max-height: 80%;
+		z-index: 1;
 	}
 }
