--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,18 +1,36 @@
 .wrapper--navbar {
 	padding: 25px 0;
-	background: none;
 	min-width: 100px;
-	text-align: center;
 	margin: 0;
 	height: 100%;
 	z-index: 1;
 	display: flex;
 	flex-direction: column;
+	background: #fff;
+
+	&.post {
+		background: none;
+
+		a {
+			text-align: left;
+
+			img {
+				padding: 0;
+				width: 35px;
+			}
+		}
+	}
 
 	#hoverdown {
 		cursor: pointer;
 		opacity: 0.5;
 		transition: all 250ms ease-in-out;
+		text-align: center;
+
+		&.left {
+			text-align: left;
+			margin: 0 15px;
+		}
 
 		&:hover {
 			opacity: 1;
@@ -20,6 +38,13 @@
 
 		#white-nav a {
 			color: #fff;
+		}
+
+		#nav.post {
+			background: $dark-gray;
+			width: 100%;
+			min-width: 250px;
+			padding: 1px 15px 25px 15px;
 		}
 	}
 
@@ -54,6 +79,7 @@
 	a {
 		background: none;
 		opacity: 0.5;
+		text-align: center;
 
 		img {
 			padding: 0 25px;
