--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -56,6 +56,7 @@ $lighter-gray                 : mix(#fff, $gray, 90%) !default;
 $yellow                       : #f8c000;
 $dark-blue                    : #1b2b34;
 $light-blue                   : #d4dde2;
+$slate-blue					  : #607D8B;
 
 $background-color             : #fff !default;
 $code-background-color        : #fafafa !default;
